# FIPSApp

./: .gitignore  LICENSE  README.md  build.gradle  prepare.sh  settings.gradle
app/: build.gradle
app/include/: curl  openssl
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  core.cpp  core.h  http.cpp  http.h  ossl.cpp  ossl.h
app/src/main/java/com/example/fipsapp/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/raw/: fips_config_arm64_v8a.cnf
